--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
+    "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-feather": "^2.0.10",
+    "react-responsive-pagination": "^2.11.3",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
